# eeg-robust

./: .gitignore  environment.lock.yml  environment.yml  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: bcic4_2a.yaml
configs/model/: eegnet.yaml
configs/trainer/: default.yaml
src/bci/: train.py
src/bci.egg-info/: PKG-INFO  SOURCES.txt
src/bci/data/: augmentations.py  download.py  label_map.py  preprocess.py  splits.py  test_full_pipeline.py  test_preprocess.py
src/bci/eval/: calibration.py  metrics.py
src/bci/models/: csp_baseline.py  dann.py  debug_subjects.py  debug_subjects2.py  debug_subjects3.py  debug_subjects4.py  debug_subjects5.py  eegnet_model.py  feature_extractor.py  irm.py  regularization.py  shallow_convnet_model.py  tcn_model.py  test_csp_baseline.py  test_csp_within_subject.py  test_eegnet.py  test_eegnet_multisubject.py  test_eegnet_v2.py  test_eegnet_v3.py  test_eegnet_v4.py  test_eegnet_within_subject.py  test_latency_params.py  test_shallow_convnet.py  test_shallow_within_subject.py  test_tcn.py  test_tcn_within_subject.py  test_week4_gaps.py  test_week4_robustness.py
src/bci/utils/: seed.py
